welcome.lessons.welcome.array.array123.Array123.scala.error
array123:12: error: class Array takes type parameters
def newTableau(nums:Array[Int]): Array = {
                                 ^array123:12: error: class Array takes type parameters
def newTableau(nums:Array[Int]): Array = {
                                 ^